gebruik Long.valueOf() ipv new Long()